fixed space list item category alignment

--- a/src/app/shared/components/space-list-item/space-list-item.component.scss
+++ b/src/app/shared/components/space-list-item/space-list-item.component.scss
@@ -102,6 +102,10 @@
 }
 
 .si-icon {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
   height: auto;
   width: auto;
   max-width: 200px;
